Update borders to outlines to fix layout issues

--- a/src/EA.Iws.Web/Content/select2/select2.css
+++ b/src/EA.Iws.Web/Content/select2/select2.css
@@ -140,12 +140,10 @@ html[dir="rtl"] .select2-container .select2-choice > .select2-chosen {
 }
 
 .select2-drop-active {
-    border: 3px solid #ffbf47;
-    border-top: none;
+    outline: 3px solid #ffbf47;
 }
 
 .select2-drop.select2-drop-above.select2-drop-active {
-    border-top: 3px solid #ffbf47;
 }
 
 .select2-drop-auto-width {
@@ -229,23 +227,15 @@ html[dir="rtl"] .select2-search input {
 
 .select2-container-active .select2-choice,
 .select2-container-active .select2-choices {
-    border: 3px solid #ffbf47;
-    outline: none;
+    outline: 3px solid #ffbf47;
 }
 
 .select2-dropdown-open .select2-choice {
-    border-bottom-color: transparent;
-
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-
     background-color: #eee;
 }
 
 .select2-dropdown-open.select2-drop-above .select2-choice,
 .select2-dropdown-open.select2-drop-above .select2-choices {
-    border: 3px solid #ffbf47;
-    border-top-color: transparent;
 }
 
 .select2-dropdown-open .select2-choice .select2-arrow {
